View-order tests passing
