# api/controllers/orders/peepl-pay-update-paid-order-webhook.js
@@ -1,36 +1,42 @@
 module.exports = {
+  friendlyName: "Peepl pay Update Paid Order webhook", //peeplWebhookAddressCustomerUpdatePaidOrder
 
-
-  friendlyName: 'Peepl pay Update Paid Order webhook', //peeplWebhookAddressCustomerUpdatePaidOrder
-
-
-  description: '',
-
+  description: "",
 
   inputs: {
     publicId: {
-      type: 'string'
+      type: "string",
+      description:
+        "the paymentIntentId as this is the publicId that the peeplPay api keeps",
     },
     metadata: {
-      type: 'ref',
+      type: "ref",
     },
     status: {
-      type: 'string'
-    }
+      type: "string",
+    },
   },
-
 
   exits: {
+    orderNotFound: {
+      statusCode: 404,
+      responseType: "notFound",
+    },
+    success: {
+      statusCode: 200,
+    },
   },
 
-
   fn: async function (inputs, exits) {
-
     var newOrder = await Order.findOne({
       publicId: inputs.metadata.orderId,
       paymentIntentId: inputs.metadata.paymentIntentId,
-      customerWalletAddress: inputs.metadata.customerWalletAddress
+      customerWalletAddress: inputs.metadata.customerWalletAddress,
     });
+
+    if (!newOrder) {
+      return exits.orderNotFound();
+    }
 
     // send a refund to the user:
     await sails.helpers.revertPaymentPartial.with({
@@ -45,20 +51,20 @@ module.exports = {
     // create a new request for the vendor to check that they can service the updated order.
     await sails.helpers.sendSmsNotification.with({
       to: newOrder.vendor.phoneNumber,
-      body: `You have received an updated order from vegi resulting from the partial fulfillment of order: ${newOrder.parentOrder.publicId}. ` +
+      body:
+        `You have received an updated order from vegi resulting from the partial fulfillment of order: ${newOrder.parentOrder.publicId}. ` +
         `The order is scheduled for delivery between ${newOrder.fulfilmentSlotFrom} and ${newOrder.fulfilmentSlotTo}. ` +
         `To accept or decline: ` +
-        sails.config.custom.baseUrl + '/admin/approve-order/' + newOrder.publicId
+        sails.config.custom.baseUrl +
+        "/admin/approve-order/" +
+        newOrder.publicId,
     });
 
     // All done.
     return exits.success({
       orderID: newOrder.publicId,
       paymentIntentID: newOrder.paymentIntentId,
-      calculatedOrderTotal: newOrder.total
+      calculatedOrderTotal: newOrder.total,
     });
-
-  }
-
-
+  },
 };
